Fix alignment of sidebar rooms.

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -13,7 +13,7 @@
     }
     li
     {
-        margin-bottom: -5px;
+        margin-bottom: -4px;
     }
     li::before
     {
